build: java 22 -> 17; build: lighter dockerfiles;